--- a/FitHub/FitHub/Setting/AboutViewController.storyboard
+++ b/FitHub/FitHub/Setting/AboutViewController.storyboard
@@ -41,7 +41,13 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pZC-yO-2gP">
-                                        <rect key="frame" x="20" y="250" width="335" height="24"/>
+                                        <rect key="frame" x="20" y="264" width="335" height="24"/>
+                                        <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12222" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOC-oL-1ti">
+                                        <rect key="frame" x="163.5" y="230" width="48" height="24"/>
                                         <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -55,10 +61,12 @@
                                     <constraint firstItem="aZE-FI-sDI" firstAttribute="centerX" secondItem="aMg-Hv-AW9" secondAttribute="centerX" id="FdY-2o-t95"/>
                                     <constraint firstItem="R8N-Gm-VS8" firstAttribute="leading" secondItem="aMg-Hv-AW9" secondAttribute="leading" constant="20" id="KYV-DL-7N4"/>
                                     <constraint firstAttribute="trailing" secondItem="pZC-yO-2gP" secondAttribute="trailing" constant="20" id="LTM-9E-eTQ"/>
+                                    <constraint firstItem="pZC-yO-2gP" firstAttribute="top" secondItem="vOC-oL-1ti" secondAttribute="bottom" constant="10" id="NRg-I7-OwQ"/>
                                     <constraint firstItem="pZC-yO-2gP" firstAttribute="leading" secondItem="aMg-Hv-AW9" secondAttribute="leading" constant="20" id="RLK-Es-Vhi"/>
                                     <constraint firstAttribute="trailing" secondItem="R8N-Gm-VS8" secondAttribute="trailing" constant="20" id="SGG-n8-UQo"/>
-                                    <constraint firstItem="pZC-yO-2gP" firstAttribute="top" secondItem="aZE-FI-sDI" secondAttribute="bottom" constant="20" id="jdm-AA-QF2"/>
+                                    <constraint firstItem="vOC-oL-1ti" firstAttribute="top" secondItem="aZE-FI-sDI" secondAttribute="bottom" id="pBW-mo-BcU"/>
                                     <constraint firstItem="R8N-Gm-VS8" firstAttribute="top" secondItem="aMg-Hv-AW9" secondAttribute="top" constant="60" id="qc0-6q-WAB"/>
+                                    <constraint firstItem="vOC-oL-1ti" firstAttribute="centerX" secondItem="aMg-Hv-AW9" secondAttribute="centerX" id="zfx-mb-6Jw"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="RWN-lT-C5k" id="plF-QM-0rW"/>
@@ -78,6 +86,7 @@
                         <outlet property="arrowView" destination="R8N-Gm-VS8" id="GJ6-Bn-5ic"/>
                         <outlet property="label" destination="pZC-yO-2gP" id="pun-50-xOD"/>
                         <outlet property="scrollView" destination="aMg-Hv-AW9" id="BRo-7L-Mce"/>
+                        <outlet property="versionLabel" destination="vOC-oL-1ti" id="eqT-uN-Nss"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XwN-57-KlL" userLabel="First Responder" sceneMemberID="firstResponder"/>
