--- a/FitHub/FitHub/Repository/RepositoriesTableViewCell.xib
+++ b/FitHub/FitHub/Repository/RepositoriesTableViewCell.xib
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -39,30 +40,44 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Rnw-GN-SM8">
-                        <rect key="frame" x="36" y="37" width="175" height="14"/>
+                        <rect key="frame" x="36" y="37" width="199" height="14"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UXv-kU-DZw">
+                                <rect key="frame" x="0.0" y="0.0" width="14" height="14"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="14" id="AOT-BX-XfE"/>
+                                    <constraint firstAttribute="width" secondItem="UXv-kU-DZw" secondAttribute="height" multiplier="1:1" id="M33-NV-Crn"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="7"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iul-TH-e6P">
-                                <rect key="frame" x="0.0" y="0.0" width="34" height="14"/>
+                                <rect key="frame" x="24" y="0.0" width="34" height="14"/>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Nt-rs-TVW" userLabel="Star Button">
-                                <rect key="frame" x="44" y="0.0" width="37" height="14"/>
+                                <rect key="frame" x="68" y="0.0" width="37" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="123" image="star">
                                     <color key="titleColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5XO-w2-0Dn" userLabel="Fork Button">
-                                <rect key="frame" x="91" y="0.0" width="37" height="14"/>
+                                <rect key="frame" x="115" y="0.0" width="37" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="123" image="fork">
                                     <color key="titleColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="djH-Fu-Z6X" userLabel="License Button">
-                                <rect key="frame" x="138" y="0.0" width="37" height="14"/>
+                                <rect key="frame" x="162" y="0.0" width="37" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="123" image="license">
                                     <color key="titleColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -92,6 +107,7 @@
             <connections>
                 <outlet property="desLabel" destination="DkP-qw-1X4" id="Igw-KT-Zf3"/>
                 <outlet property="forkButton" destination="5XO-w2-0Dn" id="SNC-Do-nAn"/>
+                <outlet property="languageColorView" destination="UXv-kU-DZw" id="rsG-QC-eqF"/>
                 <outlet property="languageLabel" destination="iul-TH-e6P" id="GIa-nn-0fe"/>
                 <outlet property="licenseButton" destination="djH-Fu-Z6X" id="IRr-PP-weW"/>
                 <outlet property="nameLabel" destination="cMp-a4-mEP" id="kfe-a2-E1E"/>
