--- a/FitHub/FitHub/Login/LoginViewController.xib
+++ b/FitHub/FitHub/Login/LoginViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="ipad12_9" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="FitHub" customModuleProvider="target">
             <connections>
                 <outlet property="activityIndicator" destination="yL5-aw-EoB" id="tky-aH-eQN"/>
+                <outlet property="coverView" destination="cTk-HZ-3BY" id="HUA-uv-b4I"/>
                 <outlet property="loginButton" destination="kKT-hL-b3c" id="Ms3-aG-a7F"/>
                 <outlet property="logoImageView" destination="z3Q-Rk-HNz" id="V5P-Cc-y1v"/>
                 <outlet property="nameTextField" destination="nJA-xy-zb1" id="LVC-dI-s73"/>
@@ -22,11 +23,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+            <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="nJA-xy-zb1" userLabel="username">
-                    <rect key="frame" x="292" y="228" width="440" height="44"/>
+                    <rect key="frame" x="20" y="128" width="528" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="8I3-eh-Vho"/>
                         <constraint firstAttribute="width" constant="440" id="iQF-Hb-7E2"/>
@@ -46,13 +47,13 @@
                     </variation>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="W2i-YQ-jqL" userLabel="pwd">
-                    <rect key="frame" x="292" y="280" width="440" height="44"/>
+                    <rect key="frame" x="20" y="180" width="528" height="44"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardAppearance="alert" secureTextEntry="YES" textContentType="password"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kKT-hL-b3c">
-                    <rect key="frame" x="292" y="332" width="440" height="44"/>
+                    <rect key="frame" x="20" y="232" width="528" height="44"/>
                     <color key="backgroundColor" red="0.15686274510000001" green="0.65490196079999996" blue="0.27058823529999998" alpha="1" colorSpace="calibratedRGB"/>
                     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" title="登录"/>
@@ -67,14 +68,14 @@
                     </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FitHubLogo" translatesAutoresizingMaskIntoConstraints="NO" id="z3Q-Rk-HNz">
-                    <rect key="frame" x="462" y="120" width="100" height="100"/>
+                    <rect key="frame" x="234" y="20" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="z3Q-Rk-HNz" secondAttribute="height" multiplier="1:1" id="nuu-7E-ma4"/>
                         <constraint firstAttribute="width" constant="100" id="wV0-or-uPV"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OLw-ah-66O">
-                    <rect key="frame" x="20" y="40" width="31" height="30"/>
+                    <rect key="frame" x="20" y="20" width="31" height="30"/>
                     <state key="normal" title="取消">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
@@ -83,29 +84,64 @@
                     </connections>
                 </button>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="yL5-aw-EoB">
-                    <rect key="frame" x="307" y="344" width="20" height="20"/>
+                    <rect key="frame" x="35" y="244" width="20" height="20"/>
                 </activityIndicatorView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x4h-xr-4W9">
+                    <rect key="frame" x="252.5" y="284" width="63" height="27"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <state key="normal" title="Github登陆"/>
+                    <connections>
+                        <action selector="githubLoginTap:" destination="-1" eventType="touchUpInside" id="u9f-7d-fve"/>
+                    </connections>
+                </button>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cTk-HZ-3BY">
+                    <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                    <subviews>
+                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="hcg-FG-3YD">
+                            <rect key="frame" x="234" y="110" width="100" height="100"/>
+                            <color key="backgroundColor" white="0.66666666669999997" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="100" id="ASP-F1-59a"/>
+                                <constraint firstAttribute="height" constant="100" id="cZl-R3-fin"/>
+                            </constraints>
+                        </activityIndicatorView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="hcg-FG-3YD" firstAttribute="centerX" secondItem="cTk-HZ-3BY" secondAttribute="centerX" id="J8e-OE-WdQ"/>
+                        <constraint firstItem="hcg-FG-3YD" firstAttribute="centerY" secondItem="cTk-HZ-3BY" secondAttribute="centerY" id="q7w-Eq-5IA"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="yL5-aw-EoB" firstAttribute="leading" secondItem="kKT-hL-b3c" secondAttribute="leading" constant="15" id="2kU-MQ-SGP"/>
                 <constraint firstItem="yL5-aw-EoB" firstAttribute="centerY" secondItem="kKT-hL-b3c" secondAttribute="centerY" id="6uL-A2-eoV"/>
+                <constraint firstItem="cTk-HZ-3BY" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="AvG-t2-UDC"/>
                 <constraint firstItem="kKT-hL-b3c" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="FWH-hI-GgL"/>
+                <constraint firstItem="cTk-HZ-3BY" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="HuF-Qz-sq7"/>
                 <constraint firstItem="kKT-hL-b3c" firstAttribute="height" secondItem="nJA-xy-zb1" secondAttribute="height" id="Izd-ZK-6Q8"/>
                 <constraint firstItem="OLw-ah-66O" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="M4f-Al-t1u"/>
                 <constraint firstItem="W2i-YQ-jqL" firstAttribute="height" secondItem="nJA-xy-zb1" secondAttribute="height" id="MbO-6x-Oa1"/>
                 <constraint firstItem="OLw-ah-66O" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="NiK-Ra-myz"/>
                 <constraint firstItem="nJA-xy-zb1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Nie-nj-ofI"/>
+                <constraint firstItem="x4h-xr-4W9" firstAttribute="top" secondItem="kKT-hL-b3c" secondAttribute="bottom" constant="8" id="Nsj-vw-GJk"/>
                 <constraint firstItem="kKT-hL-b3c" firstAttribute="top" secondItem="W2i-YQ-jqL" secondAttribute="bottom" constant="8" id="O9w-tQ-ewc"/>
+                <constraint firstItem="x4h-xr-4W9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OOc-rG-Qvv"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nJA-xy-zb1" secondAttribute="trailing" constant="20" id="VqE-ed-s2O"/>
                 <constraint firstItem="W2i-YQ-jqL" firstAttribute="trailing" secondItem="nJA-xy-zb1" secondAttribute="trailing" id="dh0-lK-a5u"/>
                 <constraint firstItem="W2i-YQ-jqL" firstAttribute="leading" secondItem="nJA-xy-zb1" secondAttribute="leading" id="fvm-pD-5Zf"/>
                 <constraint firstItem="nJA-xy-zb1" firstAttribute="top" secondItem="z3Q-Rk-HNz" secondAttribute="bottom" constant="8" id="gZf-MS-6qT"/>
                 <constraint firstItem="nJA-xy-zb1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="i1M-2f-eh5"/>
-                <constraint firstItem="z3Q-Rk-HNz" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="jrS-w8-A1X"/>
+                <constraint firstItem="z3Q-Rk-HNz" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="100" id="jrS-w8-A1X">
+                    <variation key="heightClass=compact-widthClass=compact" constant="20"/>
+                    <variation key="heightClass=compact-widthClass=regular" constant="40"/>
+                </constraint>
                 <constraint firstItem="W2i-YQ-jqL" firstAttribute="top" secondItem="nJA-xy-zb1" secondAttribute="bottom" constant="8" id="kjJ-G4-qe2"/>
                 <constraint firstItem="z3Q-Rk-HNz" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="myh-Mb-6Co"/>
                 <constraint firstItem="kKT-hL-b3c" firstAttribute="width" secondItem="W2i-YQ-jqL" secondAttribute="width" id="qtC-1r-jBy"/>
+                <constraint firstItem="cTk-HZ-3BY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="tCR-t3-EGF"/>
+                <constraint firstItem="cTk-HZ-3BY" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="xkg-Xq-5zn"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <variation key="default">
@@ -120,7 +156,7 @@
                     <exclude reference="i1M-2f-eh5"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="-666" y="-7"/>
+            <point key="canvasLocation" x="-711.97183098591552" y="-91.875"/>
         </view>
     </objects>
     <resources>
