--- a/FitHub/FitHub/Login/LoginViewController.xib
+++ b/FitHub/FitHub/Login/LoginViewController.xib
@@ -75,12 +75,21 @@
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OLw-ah-66O">
-                    <rect key="frame" x="20" y="20" width="31" height="30"/>
+                    <rect key="frame" x="20" y="8" width="31" height="30"/>
                     <state key="normal" title="取消">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="back:" destination="-1" eventType="touchUpInside" id="yj9-FJ-Ccf"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ekD-V5-CWe">
+                    <rect key="frame" x="390" y="8" width="158" height="30"/>
+                    <state key="normal" title="Personal Access Token">
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="onPersonalAccessTokenButton:" destination="-1" eventType="touchUpInside" id="E6F-fl-E4X"/>
                     </connections>
                 </button>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="yL5-aw-EoB">
@@ -121,14 +130,15 @@
                 <constraint firstItem="kKT-hL-b3c" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="FWH-hI-GgL"/>
                 <constraint firstItem="cTk-HZ-3BY" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="HuF-Qz-sq7"/>
                 <constraint firstItem="kKT-hL-b3c" firstAttribute="height" secondItem="nJA-xy-zb1" secondAttribute="height" id="Izd-ZK-6Q8"/>
-                <constraint firstItem="OLw-ah-66O" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="M4f-Al-t1u"/>
+                <constraint firstItem="OLw-ah-66O" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="8" id="M4f-Al-t1u"/>
                 <constraint firstItem="W2i-YQ-jqL" firstAttribute="height" secondItem="nJA-xy-zb1" secondAttribute="height" id="MbO-6x-Oa1"/>
-                <constraint firstItem="OLw-ah-66O" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="NiK-Ra-myz"/>
+                <constraint firstItem="OLw-ah-66O" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leadingMargin" id="NiK-Ra-myz"/>
                 <constraint firstItem="nJA-xy-zb1" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Nie-nj-ofI"/>
                 <constraint firstItem="x4h-xr-4W9" firstAttribute="top" secondItem="kKT-hL-b3c" secondAttribute="bottom" constant="8" id="Nsj-vw-GJk"/>
                 <constraint firstItem="kKT-hL-b3c" firstAttribute="top" secondItem="W2i-YQ-jqL" secondAttribute="bottom" constant="8" id="O9w-tQ-ewc"/>
                 <constraint firstItem="x4h-xr-4W9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OOc-rG-Qvv"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="nJA-xy-zb1" secondAttribute="trailing" constant="20" id="VqE-ed-s2O"/>
+                <constraint firstItem="ekD-V5-CWe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="8" id="dM6-8K-Jmd"/>
                 <constraint firstItem="W2i-YQ-jqL" firstAttribute="trailing" secondItem="nJA-xy-zb1" secondAttribute="trailing" id="dh0-lK-a5u"/>
                 <constraint firstItem="W2i-YQ-jqL" firstAttribute="leading" secondItem="nJA-xy-zb1" secondAttribute="leading" id="fvm-pD-5Zf"/>
                 <constraint firstItem="nJA-xy-zb1" firstAttribute="top" secondItem="z3Q-Rk-HNz" secondAttribute="bottom" constant="8" id="gZf-MS-6qT"/>
@@ -140,6 +150,7 @@
                 <constraint firstItem="W2i-YQ-jqL" firstAttribute="top" secondItem="nJA-xy-zb1" secondAttribute="bottom" constant="8" id="kjJ-G4-qe2"/>
                 <constraint firstItem="z3Q-Rk-HNz" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="myh-Mb-6Co"/>
                 <constraint firstItem="kKT-hL-b3c" firstAttribute="width" secondItem="W2i-YQ-jqL" secondAttribute="width" id="qtC-1r-jBy"/>
+                <constraint firstAttribute="trailingMargin" secondItem="ekD-V5-CWe" secondAttribute="trailing" id="sv6-g7-hcP"/>
                 <constraint firstItem="cTk-HZ-3BY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="tCR-t3-EGF"/>
                 <constraint firstItem="cTk-HZ-3BY" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="xkg-Xq-5zn"/>
             </constraints>
@@ -156,7 +167,7 @@
                     <exclude reference="i1M-2f-eh5"/>
                 </mask>
             </variation>
-            <point key="canvasLocation" x="-711.97183098591552" y="-91.875"/>
+            <point key="canvasLocation" x="-739" y="-163"/>
         </view>
     </objects>
     <resources>
